# simple-voxels

./: .gitmodules  CMakeLists.txt  README.md
data/: CMakeLists.txt
data/shaders/: test.frag  test.vert
src/: CMakeLists.txt  README.md  chunkbuffers.cpp  chunkbuffers.hpp  chunkprocessor.cpp  chunkprocessor.hpp  common.hpp  gamestate.hpp  input.cpp  input.hpp  ioutils.cpp  ioutils.hpp  main.cpp  meshgenerator.cpp  meshgenerator.hpp  shader.cpp  shader.hpp  voxelterrain.cpp  voxelterrain.hpp
src/engine/: CMakeLists.txt
src/game/: CMakeLists.txt  gamestate.hpp  main.cpp
src/include/sivox/: sivox.hpp
tests/: CMakeLists.txt  README.md  input.cpp  ioutils.cpp  main.cpp  meshgenerator.cpp  voxelterrain.cpp
tools/clonedir/: CMakeLists.txt  main.cpp
